--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h2>William Frederick Mosto</h2>
       <div id="navbar">
         <a class= "left_button" href="https://github.com/WM4189?tab=repositories">My Projects</a>
-        <a class= "right_button" href="/Users/wm/Development/code/myWebsite/wfmResume.pdf">About Me</a>
+        <a class= "right_button" href="wfmResume.pdf">About Me</a>
       </div>
     </div> 
   </body>
