--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="script.js"></script>   
   <body>
     <div id="header">
-      <h2>William Frederick Mosto</h2>
+      <h2>William<br>Frederick<br>Mosto</h2>
       <div id="navbar">
         <a class= "left_button" href="https://github.com/WM4189?tab=repositories">My Projects</a>
         <a class= "right_button" href="wfmResume.pdf">About Me</a>
