Add JS MouseEvents

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <link rel="stylesheet" href="style.css">
     <title>I'm Me</title>
   </head>
-  <script src="script.js"></script>   
   <body>
     <div id="header">
       <h2>William<br>Frederick<br>Mosto</h2>
-      <div id="navbar">
-        <a class= "left_button" href="https://github.com/WM4189?tab=repositories">My Projects</a>
-        <a class= "right_button" href="wfmResume.pdf">About Me</a>
-      </div>
-    </div> 
+      <div class="navWrap">
+        <div id="navbarL">
+          <a class= "left_button" href="https://github.com/WM4189?tab=repositories">My Projects</a>
+        </div>
+        <div id="navbarR">
+          <a class= "right_button" href="wfmResume.pdf">About Me</a>
+        </div>
+      </div> 
+    </div>
+    <script src="script.js"></script> 
   </body>
 </html> 
